# sensei

./: .env.example  .env.template  .gitignore  4  API.md  Cargo.toml  README.md  build.rs  cert.pem  config.yaml  example.sh  key.pem  prompts.yaml  remote_example.sh  repomix-output.md  sentence_service.proto  todo.md
config-samples/: config.yaml
prompts/: whisper.md
proto/: sentence_service.proto
src/: _workflow.rs  analyze_sentence.rs  call_ollama.rs  cli.rs  endpoint_client.rs  example_usage_with_json.rs  first_find_closest_endpoint.rs  fourth_match_fields.rs  grpc_server.rs  json_helper.rs  main.rs  print_structured_analysis.rs  second_extract_matched_action.rs  sentence_service.rs  third_find_endpoint_by_substring.rs  workflow.rs  zero_generate_json.rs  zero_sentence_to_json.rs
src/models/: config.rs  mod.rs
src/models/providers/: claude.rs  mod.rs  ollama.rs  selector.rs
src/prompts/: mod.rs
src/utils/: email.rs
src/workflow/: config.rs  context.rs  engine.rs  mod.rs  steps.rs
src/workflow/actions/: extract_matched_action.rs  find_closest_endpoint.rs  match_fields.rs  mod.rs  sentence_to_json.rs
test/: sentence.sh
