[package]
name = "sensei"
version = "0.1.0"
edition = "2021"

[dependencies]
grpc_logger = "0.10.0"
# grpc_logger = { path = "../grpc-logger" } 
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tonic = { version = "0.12.3", features = ["gzip", "tls"] }
tonic-reflection = "0.12.3"
tonic-web = "0.12.3"
tower-http = { version = "0.6.2", features = ["cors"] }
prost = "0.13.4"
tracing-futures = "0.2.5"
http = "1.2.0"
tokio-stream = "0.1.17"
futures = "0.3.31"
clap = { version = "4.5.30", features = ["derive"] }
async-trait = "0.1.86"
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "sensei"
path = "src/main.rs"
